--- a/src/assets/styles/base/typography.scss
+++ b/src/assets/styles/base/typography.scss
@@ -6,7 +6,7 @@ ul {
 
   &.no-bullets {
     list-style: none;
-    padding: 0;
+    padding: $spacing-none;
   }
 }
 
