--- a/src/components/docs/Typography/typography.stories.scss
+++ b/src/components/docs/Typography/typography.stories.scss
@@ -16,6 +16,6 @@
   .heading-1,
   .heading-2,
   .heading-3 {
-    margin: 0 0 1rem;
+    margin: $spacing-none $spacing-none 1rem;
   }
 }
